--- a/app/src/main/res/layout/fragment_internet.xml
+++ b/app/src/main/res/layout/fragment_internet.xml
@@ -22,7 +22,7 @@
             tools:context=".fragments.DrainFragment">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etTax"
+                android:id="@+id/etSum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
