--- a/app/src/main/res/layout/activity_payment_detail.xml
+++ b/app/src/main/res/layout/activity_payment_detail.xml
@@ -101,7 +101,9 @@
         android:background="@color/colorPrimary"
         android:elevation="8dp"
         android:gravity="end"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp"
         android:text="@{Conv.convertIntToString(model.sum)}"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/background_light"
@@ -112,11 +114,13 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:elevation="8dp"
-        android:gravity="start"
-        android:padding="8dp"
+        android:gravity="center_vertical|start"
+        android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:text="@string/total_sum"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/background_light"
